<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExampleList</string>
    <string name="action_settings">Settings</string>
    <string name="camera_label">Camera Set</string>
    <string name="camera_list_label">Camera List</string>
    <string name="camera_description">中心和點擊位置、傾角、parse紀錄</string>
    <string name="press_position">press position:(tap or long press on the map)</string>
    <string name="example1_label">Change Map Type</string>
    <string name="example1_description">底圖選擇</string>
    <string name="example1_change_map_type">Types</string>
    <string name="down_arrow">\u2193</string>
    <string name="hello_world">Hello world!</string>
    <string name="hybrid">Hybrid</string>
    <string name="map_not_ready">map not ready</string>
    <string name="no_demos">no demos</string>
    <string name="none_map">None Map</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="camera_list">Memory Camera</string>
    <string name="save_camera">Save Camera</string>
    <string name="up_arrow">\u2191</string>

    <string-array name="map_type">
        <item>@string/normal</item>
        <item>@string/satellite</item>
        <item>@string/hybrid</item>
        <item>@string/terrain</item>
        <item>@string/none_map</item>
    </string-array>
    <string-array name="camera_dialog_list">
        <item>Modify</item>
        <item>Delete</item>
    </string-array>

</resources>